--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-dash.dcc
-dash.html
-dash-bootstrap-components
-pandas
-plotly.graph_objects
-plotly.express
+dash==2.5.1
+dash-bootstrap-components==1.2.1
+pandas==1.4.2
+plotly==5.6.0
